<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textViewReward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rewarditem"
        android:textColor="@color/white"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/imageViewPoints"
        android:layout_toStartOf="@+id/imageViewPoints" />

    <ImageView
        android:id="@+id/imageViewPoints"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/pointswhite"
        android:layout_alignBottom="@+id/textViewReward"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/textViewReward"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/titleitem"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/descriptionitem"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>